--- a/clientviews/admin/course-traffic.page.tmpl
+++ b/clientviews/admin/course-traffic.page.tmpl
@@ -73,7 +73,7 @@
                         data: chartdata,
                         options: {
                             legend: {
-                                display: false,
+                                display: true,
                                 position: 'top',
                             },
                             title: {
@@ -130,7 +130,7 @@
                         data: chartdata,
                         options: {
                             legend: {
-                                display: false,
+                                display: true,
                                 position: 'top',
                             },
                             title: {
