--- a/clientviews/admin/member.page.tmpl
+++ b/clientviews/admin/member.page.tmpl
@@ -26,12 +26,19 @@
                     <a class="nav-link active" id="general-tab" data-toggle="tab" href="#user-tab-content">Student
                         Information</a>
                 </li>
+
                 <li class="nav-item">
                     <a class="nav-link" id="activity-tab" href="#access-tab-content" data-toggle="tab">Course
                         Activity</a>
                 </li>
+
                 <li class="nav-item">
                     <a class="nav-link" id="assignment-tab" href="#assignments-tab-content" data-toggle="tab">Assignments</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" id="chart-tab" data-toggle="tab" href="#chart-tab-content" role="tab"
+                       aria-controls="Logo" aria-selected="false">Progress</a>
                 </li>
             </ul>
 
@@ -260,6 +267,33 @@
                         </table>
                     </div>
                 </div>
+
+                <div class="tab-pane fade" role="tabpanel" aria-labelledby="chart-tab" id="chart-tab-content">
+                    <h3 class="mt-4">My Progress</h3>
+
+                    <div class="row">
+                        <div class="offset-4 col-md-4">
+                            <div class="form-group ">
+                                <label for="course_id">Course</label>
+                                <select id="course_id" name="active" class="custom-select" onchange="showCourseData()">
+                                    {{range (index .RowSets "courses")}}
+                                        <option value="{{.ID}}">{{.CourseName}}</option>
+                                    {{end}}
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6 col-xs-12">
+                            <canvas id="viewsChart"></canvas>
+                        </div>
+                        <div class="col-md-6 col-xs-12">
+                            <canvas id="durationChart"></canvas>
+                            <div id="chartjs-tooltip"></div>
+                        </div>
+                    </div>
+
+                </div>
             </div>
         </div>
     </div>
@@ -269,6 +303,9 @@
 
 {{define "js"}}
     <script>
+
+        let viewChart;
+        let timeChart;
 
         (function () {
             'use strict';
@@ -359,6 +396,132 @@
                 }
             })
         }
+
+        function showCourse(x) {
+            $.ajax({
+                url: "/admin/courses/course/ajax/traffic-data-for-student-admin?student_id={{.AdminUser.ID}}&course_id=" + x,
+                method: "GET",
+                success: function (data) {
+                    var url = [];
+                    var views = [];
+
+                    for (let i in data) {
+                        url.push(data[i].y);
+                        views.push(data[i].views);
+                    }
+
+                    var chartdata = {
+                        labels: url,
+                        datasets: [
+                            {
+                                label: 'Views',
+                                backgroundColor: 'rgba(54, 162, 235, 0.5)',
+                                borderColor: 'rgba(54, 162, 235, 0.5)',
+                                hoverBackgroundColor: 'rgba(54, 162, 235, 0.5)',
+                                hoverBorderColor: 'rgba(54, 162, 235, 0.5)',
+                                borderWidth: 1,
+                                data: views,
+                            }
+                        ],
+                    };
+
+                    var ctx = document.getElementById("viewsChart").getContext('2d');
+
+                    viewChart= new Chart(ctx, {
+                        type: 'horizontalBar',
+                        data: chartdata,
+                        options: {
+                            legend: {
+                                display: true,
+                                position: 'top',
+                            },
+                            title: {
+                                display: true,
+                                text: 'Lecture Views',
+                            },
+                            scales: {
+                                yAxes: [{
+                                    ticks: {
+                                        beginAtZero: true
+                                    }
+                                }],
+                            },
+                        }
+                    });
+                },
+                error: function (data) {
+                    console.log(data);
+                }
+            });
+
+            $.ajax({
+                url: "/admin/courses/course/ajax/traffic-data-for-student-admin?student_id={{.AdminUser.ID}}&course_id=" + x,
+                method: "GET",
+                success: function (data) {
+                    var url = [];
+                    var duration = [];
+                    var hms = [];
+
+                    for (let i in data) {
+                        url.push(data[i].y);
+                        duration.push(Math.round(data[i].time / 60));
+                    }
+
+                    var chartdata = {
+                        labels: url,
+                        datasets: [
+                            {
+                                label: 'Minutes',
+                                backgroundColor: 'rgba(255, 99, 132, 0.5)',
+                                borderColor: 'rgba(255,99,132,1)',
+                                hoverBackgroundColor: 'rgba(255, 99, 132, 0.8)',
+                                hoverBorderColor: 'rgba(200, 200, 200, 1)',
+                                borderWidth: 1,
+                                data: duration,
+                            },
+                        ],
+                    };
+
+                    var ctx = document.getElementById("durationChart").getContext('2d');
+
+                    timeChart = new Chart(ctx, {
+                        type: 'horizontalBar',
+                        data: chartdata,
+                        options: {
+                            legend: {
+                                display: true,
+                                position: 'top',
+                            },
+                            title: {
+                                display: true,
+                                text: 'Time spent in lecture',
+                            },
+                            scales: {
+                                yAxes: [{
+                                    ticks: {
+                                        beginAtZero: true
+                                    }
+                                }],
+                            },
+                        }
+                    });
+                },
+                error: function (data) {
+                    console.log(data);
+                }
+            });
+        }
+
+
+        function showCourseData() {
+            viewChart.destroy();
+            timeChart.destroy();
+            showCourse(document.getElementById("course_id").value)
+        }
+
+        document.addEventListener("DOMContentLoaded", function () {
+            showCourse(document.getElementById("course_id").value)
+        });
     </script>
 
 {{end}}
