--- a/clientviews/admin/members-all.page.tmpl
+++ b/clientviews/admin/members-all.page.tmpl
@@ -1,9 +1,9 @@
 {{template "admin-base" .}}
 
-{{define "title"}}Members - GoBlender Admin{{end}}
+{{define "title"}}Students - GoBlender Admin{{end}}
 
-{{define "admin-title"}}Members{{end}}
-{{define "content-title"}}Members{{end}}
+{{define "admin-title"}}Students{{end}}
+{{define "content-title"}}Students{{end}}
 
 {{define "content"}}
     <div class="table-responsive">
