--- a/clientviews/admin/section.page.tmpl
+++ b/clientviews/admin/section.page.tmpl
@@ -14,79 +14,158 @@
 
     {{$s := index .RowSets "section"}}
 
-    <form method="post" action="/admin/sections/{{$s.ID}}" novalidate
-          class="needs-validation"
-          id="s-form">
+    <div class="col">
 
-        <input type="hidden" name="csrf_token" id="csrf_token" value="{{.CSRFToken}}">
+        <ul class="nav nav-tabs" id="sectionTabs" role="tablist">
+            <li class="nav-item">
+                <a class="nav-link active" id="general-tab" data-toggle="tab" href="#general-tab-content" role="tab"
+                   aria-controls="home" aria-selected="true">Section</a>
+            </li>
 
-        <div class="row">
+            {{if gt $s.ID 0}}
+                <li class="nav-item">
+                    <a class="nav-link" id="students-tab" data-toggle="tab" href="#students-tab-content" role="tab"
+                       aria-controls="Logo" aria-selected="false">Students</a>
+                </li>
+            {{end}}
 
-            <div class="col-md-6 col-xs-12">
-                <div class="form-group mt-3">
-                    <label for="section_name">Section Name</label>
-                    {{with .Form.Errors.Get "section_name"}}
-                        <label class='text-danger'>{{.}}</label>
-                    {{end}}
-                    <div class="input-group">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text"><i class="fa fa-font fa-fw"></i></span>
-                        </div>
-                        <input class="form-control required {{with .Form.Errors.Get "section_name"}} is-invalid {{end}}"
-                               id="section_name"
-                               required
-                               autocomplete="off" type='text'
-                               name='section_name'
-                               value='{{$s.SectionName}}'>
-                        <div class="invalid-feedback">
-                            Please enter a value
+        </ul>
+
+        <div class="tab-content" id="sectionTabsContent">
+
+            <div class="tab-pane fade show active" role="tabpanel" aria-labelledby="general-tab"
+                 id="general-tab-content">
+
+                <form method="post" action="/admin/sections/{{$s.ID}}" novalidate
+                      class="needs-validation"
+                      id="s-form">
+
+                    <input type="hidden" name="csrf_token" id="csrf_token" value="{{.CSRFToken}}">
+
+                    <div class="row">
+
+                        <div class="col-md-6 col-xs-12">
+                            <div class="form-group mt-3">
+                                <label for="section_name">Section Name</label>
+                                {{with .Form.Errors.Get "section_name"}}
+                                    <label class='text-danger'>{{.}}</label>
+                                {{end}}
+                                <div class="input-group">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text"><i class="fa fa-font fa-fw"></i></span>
+                                    </div>
+                                    <input class="form-control required {{with .Form.Errors.Get "section_name"}} is-invalid {{end}}"
+                                           id="section_name"
+                                           required
+                                           autocomplete="off" type='text'
+                                           name='section_name'
+                                           value='{{$s.SectionName}}'>
+                                    <div class="invalid-feedback">
+                                        Please enter a value
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+                                <label for="course_id">Course</label>
+                                <select id="course_id" name="course_id" class="custom-select" required>
+                                    <option value="">Choose...</option>
+                                    {{$courses := index .RowSets "courses"}}
+                                    {{range $courses}}
+                                        <option value="{{.ID}}" {{if eq $s.CourseID .ID}} selected {{end}}>{{.CourseName}}</option>
+                                    {{end}}
+                                </select>
+                            </div>
+
+                            <div class="form-group ">
+                                <label for="active">Active</label>
+                                <select id="active" name="active" class="custom-select">
+                                    <option value="0" {{if eq $s.Active 0}} selected {{end}}>No</option>
+                                    <option value="1" {{if eq $s.Active 1}} selected {{end}}>Yes</option>
+                                </select>
+                            </div>
+
                         </div>
                     </div>
-                </div>
 
-                <div class="form-group">
-                    <label for="course_id">Course</label>
-                    <select id="course_id" name="course_id" class="custom-select" required>
-                        <option value="">Choose...</option>
-                        {{$courses := index .RowSets "courses"}}
-                        {{range $courses}}
-                            <option value="{{.ID}}" {{if eq $s.CourseID .ID}} selected {{end}}>{{.CourseName}}</option>
-                        {{end}}
-                    </select>
-                </div>
+                    <div class="row">
+                        <div class="col-md-6 col-xs-12">
+                            <hr>
+                            <input type="submit" class="btn btn-primary" value="Save">
 
-                <div class="form-group ">
-                    <label for="active">Active</label>
-                    <select id="active" name="active" class="custom-select">
-                        <option value="0" {{if eq $s.Active 0}} selected {{end}}>No</option>
-                        <option value="1" {{if eq $s.Active 1}} selected {{end}}>Yes</option>
-                    </select>
-                </div>
+                            <a class="btn btn-info" href="/admin/sections/all">Cancel</a>
 
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-md-6 col-xs-12">
-                <hr>
-                <input type="submit" class="btn btn-primary" value="Save">
-
-                <a class="btn btn-info" href="/admin/sections/all">Cancel</a>
-
-                {{if gt $s.ID 0}}
-                    <div class="float-right">
-                        <a class="btn btn-danger" href="#!" id="delete-section">Delete Section</a>
+                            {{if gt $s.ID 0}}
+                                <div class="float-right">
+                                    <a class="btn btn-danger" href="#!" id="delete-section">Delete Section</a>
+                                </div>
+                                <div class="clearfix"></div>
+                            {{end}}
+                        </div>
                     </div>
-                    <div class="clearfix"></div>
-                {{end}}
+                </form>
+
             </div>
+
+            {{if gt $s.ID 0}}
+                <div class="tab-pane fade" role="tabpanel" aria-labelledby="students-tab" id="students-tab-content">
+                    <h3 class="mt-4">Students</h3>
+
+                    <div class="table-responsive">
+                        <table id="studentTable" class="table table-striped table-bordered">
+                            <thead>
+                            <tr>
+                                <th>ID</th>
+                                <th>Name</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            {{range $s.Students}}
+                                <tr>
+                                    <td>{{.ID}}</td>
+                                    <td>{{.LastName}}, {{.FirstName}}</td>
+                                </tr>
+                            {{end}}
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            {{end}}
+
         </div>
-    </form>
+
+    </div>
+
 
 {{end}}
 
 {{define "js"}}
+
     <script>
+        {{$s := index .RowSets "section"}}
+
+        $(document).ready(function () {
+            $('a[data-toggle="tab"]').on('show.bs.tab', function (e) {
+                localStorage.setItem('activeTab', $(e.target).attr('href'));
+            });
+            let activeTab = localStorage.getItem('activeTab');
+            if (activeTab) {
+                $('#sectionTabs a[href="' + activeTab + '"]').tab('show');
+            }
+
+            if (window.location.hash !== "") {
+                $('a[href="' + window.location.hash + '"]').tab('show');
+            }
+
+            {{if gt $s.ID 0}}
+            $('#studentTable').DataTable({
+                stateSave: true,
+                order: [[1, "asc"]],
+            });
+            {{end}}
+        });
+
+
         (function () {
             'use strict';
             window.addEventListener('load', function () {
@@ -103,7 +182,6 @@
             }, false);
         })();
 
-        {{$s := index .RowSets "section"}}
         {{if gt $s.ID 0}}
         document.getElementById('delete-section').addEventListener('click', async function () {
             attention.confirm({
