--- a/clientviews/admin/section-students.page.tmpl
+++ b/clientviews/admin/section-students.page.tmpl
@@ -11,25 +11,35 @@
 {{end}}
 
 {{define "content"}}
-    <div class="table-responsive">
-        <table id="itable" class="table table-striped table-bordered">
-            <thead>
-            <tr>
-                <th style="width: 25px" class="text-center"><i class="fa fa-check"></i></th>
-                <th>Name</th>
-            </tr>
-            </thead>
-            <tbody>
-            {{$students := index .RowSets "students"}}
-            {{range $students}}
+    {{$s := index .RowSets "section"}}
+    <form method="post" action="/admin/sections/students/{{$s.ID}}">
+        <input type="hidden" name="csrf_token" value="{{.CSRFToken}}">
+
+        <div class="table-responsive">
+            <table id="itable" class="table table-striped table-bordered">
+                <thead>
                 <tr>
-                    <td style="width: 25px" class="text-center"><input type="checkbox" name="student" value="{{.ID}} {{if eq .IsRegistered 1}} checked {{end}}"></td>
-                    <td>{{.LastName}}, {{.FirstName}}</td>
+                    <th style="width: 25px" class="text-center"><i class="fa fa-check"></i></th>
+                    <th>Name</th>
                 </tr>
-            {{end}}
-            </tbody>
-        </table>
-    </div>
+                </thead>
+                <tbody>
+                {{$students := index .RowSets "students"}}
+                {{range $students}}
+                    <tr>
+                        <td style="width: 25px" class="text-center">
+                            <input type="checkbox" name="student" value="{{.ID}}" {{if eq .IsRegistered 1}} checked {{end}}>
+                        </td>
+                        <td>{{.LastName}}, {{.FirstName}}</td>
+                    </tr>
+                {{end}}
+                </tbody>
+            </table>
+        </div>
+        <hr>
+        <input type="submit" class="btn btn-primary" value="Save">
+        <a class="btn btn-info" href="/admin/sections/{{$s.ID}}">Cancel</a>
+    </form>
 {{end}}
 
 {{define "js"}}
