Working on course sections

--- a/clientviews/admin/section.page.tmpl
+++ b/clientviews/admin/section.page.tmpl
@@ -110,7 +110,7 @@
             {{if gt $s.ID 0}}
                 <div class="tab-pane fade" role="tabpanel" aria-labelledby="students-tab" id="students-tab-content">
                     <div class="float-right mt-4">
-                        <a class="btn btn-outline-secondary" href="/admin/sections/students/{{$s.ID}}">Add Student(s)</a>
+                        <a class="btn btn-outline-secondary" href="/admin/sections/students/{{$s.ID}}">Manage enrolment</a>
                     </div>
                     <div class="clearfix"></div>
                     <h3 class="mt-4">Students</h3>
