--- a/clientviews/admin/section-students.page.tmpl
+++ b/clientviews/admin/section-students.page.tmpl
@@ -8,6 +8,16 @@
 {{end}}
 {{define "content-title"}}Section Enrolment{{end}}
 {{define "css"}}
+    <style>
+        table{
+            margin: 0 auto;
+            width: 100%;
+            clear: both;
+            border-collapse: collapse;
+            table-layout: fixed; // ***********add this
+        word-wrap:break-word; // ***********and this
+        }
+    </style>
 {{end}}
 
 {{define "content"}}
@@ -19,7 +29,7 @@
             <table id="itable" class="table table-striped table-bordered">
                 <thead>
                 <tr>
-                    <th style="width: 25px" class="text-center"><i class="fa fa-check"></i></th>
+                    <th style="width: 25px !important;" class="text-center"><i class="fa fa-check"></i></th>
                     <th>Name</th>
                 </tr>
                 </thead>
@@ -27,7 +37,7 @@
                 {{$students := index .RowSets "students"}}
                 {{range $students}}
                     <tr>
-                        <td style="width: 25px" class="text-center">
+                        <td style="width: 25px !important;" class="text-center">
                             <input type="checkbox" name="student" value="{{.ID}}" {{if eq .IsRegistered 1}} checked {{end}}>
                         </td>
                         <td>{{.LastName}}, {{.FirstName}}</td>
