--- a/clientviews/admin/section.page.tmpl
+++ b/clientviews/admin/section.page.tmpl
@@ -119,15 +119,19 @@
                         <table id="studentTable" class="table table-striped table-bordered">
                             <thead>
                             <tr>
-                                <th>ID</th>
+                                <th style="width: 25px !important;" class="text-center">ID</th>
                                 <th>Name</th>
+                                <th style="width: 25px !important;" class="text-center"><i class="fa fa-trash"></i></th>
                             </tr>
                             </thead>
                             <tbody>
                             {{range $s.Students}}
                                 <tr>
-                                    <td>{{.ID}}</td>
+                                    <td style="width: 25px !important;" class="text-center">{{.ID}}</td>
                                     <td>{{.LastName}}, {{.FirstName}}</td>
+                                    <td style="width: 25px !important;" class="text-center">
+                                        <a href="#!" onclick="removeStudent({{.ID}})"><i class="fa fa-trash"></i></a>
+                                    </td>
                                 </tr>
                             {{end}}
                             </tbody>
@@ -161,12 +165,6 @@
                 $('a[href="' + window.location.hash + '"]').tab('show');
             }
 
-            {{if gt $s.ID 0}}
-            $('#studentTable').DataTable({
-                stateSave: true,
-                order: [[1, "asc"]],
-            });
-            {{end}}
         });
 
 
@@ -200,6 +198,20 @@
                 }
             })
         });
+
+        function removeStudent(x) {
+            attention.confirm({
+                html: "Are you sure you want to remove this student from this section?",
+                showCancelButton: true,
+                confirmButtonText: 'Remove Student',
+                icon: 'warning',
+                callback: function (result) {
+                    if (result !== false) {
+                        window.location.href = '/admin/sections/remove-student/{{$s.ID}}/' + x;
+                    }
+                }
+            })
+        }
         {{end}}
     </script>
 {{end}}
