--- a/clientviews/public/courses.page.tmpl
+++ b/clientviews/public/courses.page.tmpl
@@ -170,7 +170,7 @@
                 {{$courses := index .RowSets "courses"}}
                 <div class="list-group">
                 {{range $courses}}
-                    <a class="list-group-item list-group-item-action" href="/courses/overview/{{.ID}}">{{.CourseName}}</a>
+                    <a class="list-group-item list-group-item-action" href="/courses/overview/{{.ID}}">{{.SectionName}}: {{.Course.CourseName}} - {{.Term}}</a>
                 {{end}}
                 </div>
                 <div>&nbsp;</div>
